# iscc-eval

./: .gitignore  README.md  build.py  pyproject.toml
.github/workflows/: ci.yml
iscc_eval/: __init__.py  cli.py  config.py  match.py  speed.py  utils.py
iscc_eval/audio/: variations.py
iscc_eval/datasets/: fma_small.py
