[tool.poetry]
name = "iscc-eval"
version = "0.2.0"
description = "ISCC Performance Evaluation"
authors = ["Titusz Pan <tp@py7.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
iscc-eval = 'iscc_eval.cli:cli'

[tool.poetry.dependencies]
python = "^3.10"
cython = "*"
iscc-sdk = "*"
iscc-samples = "*"
py-cpuinfo = "*"
codetiming = "*"
humanize = "*"
typer = "*"

[tool.poetry.dev-dependencies]
black = "*"
pytest = "*"

[tool.black]
line-length = 100
target-version = ['py310']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
